@@ -1,3 +1,12 @@
+# ChangeLog for app-i18n/ibus-cangjie
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-cangjie/ChangeLog,v 1.4 2015/02/28 07:57:50 dlan Exp $
+
+*ibus-cangjie-2.2 (27 Feb 2015)
+
+  27 Feb 2015; Yixun Lan <dlan@gentoo.org> +ibus-cangjie-2.2.ebuild:
+  version bump, bug 541394, thanks Brendan Horan
+
 *ibus-cangjie-2.1 (24 Apr 2014)
 
   24 Nov 2014; Yixun Lan <dlan@gentoo.org> ibus-cangjie-2.1.ebuild:
